# djux

./: .gitignore  APP_ROADMAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: app-request.md  bug-report.md  feature-request.md
.github/workflows/: workflow.yml
djux/: cli.py
djux/commands/: add.py  list.py  new.py  publish.py  remove.py
djux/core/: manifest.py  patcher.py  registry.py
djux/templates/project_template/: .gitignore  djux.project.json  requirements.txt
djux/templates/project_template/config/: settings.py  urls.py
djux/tests/: test_smoke.py
djx/: cli.py
djx/commands/: add.py  list.py  new.py  publish.py  remove.py
djx/core/: downloader.py  manifest.py  patcher.py  registry.py
djx/templates/project_template/: .env.example  djx.project.json
djx/templates/project_template/config/: settings.py  urls.py
docs/: app-conventions.md  cli-reference.md  creating-apps.md  getting-started.md  manifest-spec.md  plan.md  registry.md  smoke-test-checklist.md  update-design.md
src/commands/: app.rs  outdated.rs
src/commands/templates/: README.md  djux.json
src/commands/templates/src/: .env.example  main.rs
src/commands/templates/users/: .env.example  README.md  djux.json
src/commands/templates/users/src/: main.rs
tests/: test_add.py  test_new.py  test_patcher.py
tests/fixtures/: sample_settings.py  sample_urls.py
