[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djx"
version = "0.1.0"
description = "Django extensions CLI — add production-ready apps in one command"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
]

[project.scripts]
djx = "djx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["djx*"]

[tool.setuptools.package-data]
djx = ["templates/**/*", "templates/**/.*"]
