[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djux"
version = "0.1.0"
description = "Django app installer and registry CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Djux contributors" }
]
keywords = ["django", "cli", "scaffold", "templates", "registry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities"
]
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/djuxhq/djux"
Repository = "https://github.com/djuxhq/djux"
Issues = "https://github.com/djuxhq/djux/issues"
Roadmap = "https://github.com/djuxhq/djux/blob/main/APP_ROADMAP.md"

[project.scripts]
djux = "djux.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["djux*"]

[tool.setuptools.package-data]
djux = ["templates/**/*", "templates/**/.*"]
